# OpenDebates

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  tailwind.config.js  tsconfig.json  vite.config.js
Home/: apps.py
OpenDebates/: __init__.py  __main__.py  app.py  asgi.py  config.py  db.py  logger.py  settings.py  urls.py  users.py  wsgi.py
Servers/: apps.py  views.py
assets/source/: README.md
assets/source/ts/: index.ts
templates/: home.html
templates/components/: footer.html  navigation.html
templates/layouts/: base.html
theme/: package-lock.json  package.json  tailwind.config.js
theme/static/css/: output.css
theme/templates/layouts/: base.html
