[tool.towncrier]
package = "OpenDebates"
package_dir = "OpenDebates"
directory = "changes"
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/OpenDebates/OpenDebates/issues/{issue}>`_"
type = [
    { name = "Breaking Changes",            directory = "breaking",     showcontent = true },
    { name = "Deprecation",                 directory = "deprecation",  showcontent = true },
    { name = "Features",                    directory = "feature",      showcontent = true },
    { name = "Bugfixes",                    directory = "bugfix",       showcontent = true },
    { name = "Documentation Improvements",  directory = "doc",          showcontent = true },
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --ignore=docs/conf.py --ignore=setup.py --ignore=benchmark --ignore=ci --ignore=.eggs --doctest-modules --doctest-glob=/*.rst --tb=short"
norecursedirs = [
	".git",
	".tox",
	".env",
	"dist",
	"build",
	"migrations"
]
testpaths = [
    "tests"
]
python_files = [
	"test_*.py",
	"*_test.py",
	"tests.py"
]

[tool.poetry]
name = "opendebates"
version = "0.1.0"
description = "Open Source Semantic Wiki and Debating Platform"
authors = ["Taven <taven@opendebates.net>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/OpenDebates/OpenDebates"
repository = "https://github.com/OpenDebates/OpenDebates"
documentation = "https://opendebates.readthedocs.io"
keywords = [
	"debate",
	"wiki",
	"semantic",
	"linguistics"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: FastAPI",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: Apache Software License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "OpenDebates" }
]
include = [
    ".bumpversion.cfg",
    ".coveragerc",
    ".editorconfig",
    ".readthedocs.yml",
    "AUTHORS.rst",
    "tests/*",
    "poetry.lock"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.88.0"
toml = "^0.10.2"
schema = "^0.7.5"
uvicorn = "^0.20.0"
aiofiles = "^22.1.0"
sentry-sdk = "^1.11.1"
loguru = "^0.6.0"
timeflake = "^0.4.2"
fastapi-users = {extras = ["beanie"], version = "^10.2.1"}
sendgrid = "^6.9.7"

[tool.poetry.scripts]
od = 'OpenDebates.__main__:main'

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
furo = "^2022.9.29"
pygments = "^2.13.0"

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.release.dependencies]
isort = "^5.10.1"
twine = "^4.0.1"
codecov = "^2.1.12"
bump2version = "^1.0.1"
black = "^22.10.0"
towncrier = "^22.8.0"
build = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
