[metadata]
name = OpenDebates
version = attr: OpenDebates.__version__
description = Open Source Semantically Validated Debating Platform
author = Taven <taven@opendebates.net>
author_email = taven@opendebates.net
license = Apache-2.0
license_file = LICENSE
url = https://github.com/OpenDebates/OpenDebates
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = any
classifiers =
	Development Status :: 1 - Planning
    Framework :: FastAPI
	Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
keywords =
    debate
    wiki
    semantic
    linguistics

[options]
packages = find:
python_requires = >=3.10
install_requires =
	fastapi ~= 0.85.1
    sqlmodel ~= 0.0.8
    toml ~= 0.10.2
    schema ~= 0.7.5
    Jinja2 ~= 3.1.2
    uvicorn ~= 0.18.3
    aiofiles ~= 22.1.0
    colorama ~= 0.4.5; os_name=='nt'
    structlog-sentry-logger ~= 0.17.5
    structlog ~= 22.1.0
    uvloop ~= 0.17.0; platform_system == 'Linux'

[options.extras_require]
docs =
	Sphinx
	furo
    Pygments
tests =
	pytest
	pytest-cov
release =
    isort
    twine
    codecov
    bump2version
    black
    towncrier
    build

[options.entry_points]
console_scripts =
   od = OpenDebates.__main__:main
